--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@azure/identity": "^2.0.4",
-    "@azure/keyvault-secrets": "^4.4.0",
-    "bootstrap": "^5.1.3",
-    "cookie-parser": "~1.4.4",
-    "date-fns": "^2.25.0",
-    "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "mongoose": "^6.0.12",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "@azure/identity": "^4.0.0",
+    "@azure/keyvault-secrets": "^4.7.0",
+    "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
+    "date-fns": "^2.30.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.0.1",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   }
 }
